--- a/_config.yml
+++ b/_config.yml
@@ -2,5 +2,5 @@ theme: jekyll-theme-minimal
 
 title: JMetrics
 description: JMetrics is a Java tool that measure software maintainability indicators through the Martin's Metric.
-logo: logo.png
+logo: jmetrics.png
 show_downloads: "true"
